@startuml
'https://plantuml.com/class-diagram

interface Door {
  + lock(): void
  + unlock(): void
  + open(): void
  + close(): void
  + timeOutCallback(): void
  + proximityCallback(): void
}

class Timer {
  + register(timeOut: long, door: Door): void
}

class TimedDoor {
  - TIME_OUT: int
  - _locked: boolean
  - _opened: boolean
  + TimedDoor(timer: Timer)
  + lock(): void
  + unlock(): void
  + open(): void
  + close(): void
  + timeOutCallback(): void
  + proximityCallback(): void
}

class Sensor {
  + register(door: Door): void
  - isPersonClose(): boolean
}

class SensingDoor {
  - _locked: boolean
  - _opened: boolean
  + SensingDoor(sensor: Sensor)
  + lock(): void
  + unlock(): void
  + open(): void
  + close(): void
  + timeOutCallback(): void
  + proximityCallback(): void
}

Door <|-- TimedDoor
Door <|-- SensingDoor

@enduml